# fpocket_py

./: MANIFEST.in  README.md  pyproject.toml  setup.py
c_src/: aa.c  asa.c  atom.c  calc.c  check.c  cluster.c  clusterlib.c  descriptors.c  dparams.c  dpmain.c  dpocket.c  energy.c  fparams.c  fpmain.c  fpocket.c  fpout.c  grid.c  mdparams.c  mdpbase.c  mdpmain.c  mdpmem.c  mdpocket.c  mdpout.c  memhandler.c  neighbor.c  pertable.c  pocket.c  pscoring.c  psorting.c  read_mmcif.c  refine.c  rpdb.c  sort.c  topology.c  tparams.c  tpmain.c  tpocket.c  utils.c  voronoi.c  voronoi_lst.c  (+3 more)
c_src/qhull/src/libqhull/: qhull_a.h
fpocket/: _core.c  _core.pxd  _core.pyx  fpocket_core.c  fpocket_core.h
include/: dparams.h  fparams.h  mdparams.h  mdpbase.h  mdpmem.h  mdpout.h  memhandler.h  neighbor.h  tparams.h  utils.h  voronoi.h  write_visu.h
utils/: cluster2pdb_v.py  doCleanPDBs.py
